--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
   "env": {
+    "node": true,
     "jest": true
   },
   "parserOptions": {
@@ -13,5 +14,14 @@
     "prettier",
     "prettier/@typescript-eslint"
   ],
-  "rules": {}
+  "settings": {
+    "import/resolver": {
+        "node": {
+            "extensions": [".ts"]
+        }
+    }
+  },
+  "rules": {
+    "@typescript-eslint/no-explicit-any": 0
+  }
 }
