--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "esModuleInterop": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "lib", "**/*.spec.ts"]
 }
