--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reduce-x",
+  "name": "reduce-plus",
   "version": "1.0.0",
   "description": "extra reduce functionalities, like async, split and chunk",
   "main": "./lib/index.js",
@@ -17,7 +17,8 @@
     "array",
     "async",
     "split",
-    "chunk"
+    "chunk",
+    "functional programming"
   ],
   "author": "Shunsuke Watanabe <craftgear@gmail.com>",
   "license": "MIT",
@@ -26,7 +27,6 @@
     "@types/node": "^11.9.5",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
-    "babel-jest": "^24.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.1.0",
@@ -53,10 +53,9 @@
     ],
     "cacheDirectory": ".jest/cache",
     "globals": {
-        "ts-jest": {
-            "diagnostics": false
-        }
+      "ts-jest": {
+        "diagnostics": false
+      }
     }
-
   }
 }
