--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:craftgear/reduce-x.git"
+    "url": "git@github.com:craftgear/reduce-plus.git"
   },
   "keywords": [
     "reduce",
